--- a/src/language/en.json
+++ b/src/language/en.json
@@ -3,7 +3,7 @@
     "about": "About me",
     "services": "Services",
     "projects": "Projects",
-    "contact": "Contact",
+    "contact": "Contact me",
 
 
     "site-web": "websites",
@@ -11,13 +11,13 @@
 
 
     "greeting": "Hello",
-    "name": "I am Nahuel Carrizo",
+    "name": "I am Mahendra",
     "rol": "Full-stack developer",
 
 
     "im": "who I am",
-    "description": "My name is Esteban Nahuel Carrizo and I am a full stack developer.",
-    "my-description": "I have been working on web designing and web development for 2 years. Constantly updating the technologies I already master, but also looking to learn new technologies to enrich my skills and improve my good practices as a developer.",
+    "description": "My name is Mahendra Singh Puniya and I am a full stack developer.",
+    "my-description": "Motivated and adaptable Software Engineering enthusiast with a passion for crafting efficient and innovative solutions. Adept at leveraging strong analytical skills to tackle complex problems and a fast learner dedicated to staying current with emerging technologies. Proven ability to collaborate seamlessly in team environments and deliver high-quality results. Eager to contribute my skills and enthusiasm to dynamic projects in the ever-evolving field of software development",
     "years": "Age: ",
     "from": "From: ",
     "btn-know-more": "Read more",
@@ -44,15 +44,15 @@
     "contact-info": "Contact me by: ",
 
 
-    "footer-info": "Page created by Nahuel61920",
+    "footer-info": "Page created by Mahendra singh puniya",
 
 
-    "about-info-1": "Hi, I'm Esteban Nahuel Carrizo, a student at the Technological University of Tucumán; I consider myself a person passionate about programming and web development since in 2020 I had the opportunity to get to know this world of the front-end and I was able to create my first web page only using HTML and CSS from there, I felt a great passion for web development, since you can do amazing things knowing how to use HTML, CSS, JavaScript and to this day I still feel that same passion when I create a web page.",
-    "about-info-2": "I consider myself a self-taught person since I like to be constantly learning day by day, both new technologies and new development methods that help me polish and raise my level of learning.",
-    "about-info-3": "I have experience working as a freelance web designer and developer, which gave me the opportunity to work on many interesting projects, adapting to the client's needs and budget, which allowed me to improve my skills and knowledge; Additionally, I have also had the opportunity to be part of some online and face-to-face courses that helped me enrich my skills and learn a little more about this beautiful world of web development.",
+    "about-info-1": "Hello, I'm Mahendra Singh Puniya, a dedicated student currently enrolled at Indian institute of information technology Dharwad. My journey into the realm of programming and web development commenced in 2020, and since then, I've been captivated by the endless possibilities it offers. In 2021, I embarked on my web development odyssey, creating my initial webpage using HTML and CSS. This experience ignited a profound passion for crafting digital experiences using technologies like HTML, CSS, and JavaScript.",
+    "about-info-2": "I take pride in being a self-taught individual, driven by an insatiable curiosity to explore new technologies and development methodologies continually. Embracing the role of a lifelong learner, I seek to enhance my proficiency in both established and cutting-edge technologies.",
+    "about-info-3": "My practical experience includes working as a freelance web designer and developer. Through diverse projects, I've honed my skills in adapting to clients' unique needs and budget constraints This hands-on experience has been invaluable, allowing me to refine my abilities and broaden my knowledge. In addition to freelancing, I've actively engaged in online and offline courses, contributing to my holistic understanding of web development. As I embark on new challenges. I am eager to bring my passion, self-motivation, and evolving skill set to dynamic projects in the ever-evolving landscape of web development.",
     "btn-cv": "Download CV",
-    "about-skills-1": "More than a year of professional experience in this language, allows me to perform without problems in the industry.",
-    "about-skills-2": "More than a year of work experience in this language, I use it daily to develop web designs and interfaces.",
+    "about-skills-1": "More than 2 year of professional experience in this language, allows me to perform without problems in the industry.",
+    "about-skills-2": "More than 2   year of work experience in this language, I use it daily to develop web designs and interfaces.",
     "about-skills-3": "A year of experience using it in the front-end and back-end branch, allowed me to familiarize myself with the language, and include it in my work projects.",
     "about-skills-4": "One year using this preprocessor in the professional field, I include it in many of my projects since it allows me a better structured code.",
     "about-skills-5": "Less than a year using this framework, even so, I used it in countless work projects, which allowed me to get to know it for the most part.",
@@ -83,24 +83,32 @@
     "services-info-3-p6": " Delivered in 14 business days",
     "services-buy": "buy now",
     "services-questions": "Frequent questions",
-    "services-questions-1": "What is a responsive web page?",
-    "services-questions-p1": "It is that page that is capable of adapting to any device where it is viewed, such as cell phones, tablets, laptops, without losing appearance or usability.",
-    "services-questions-2": "What is a Domain and a Hosting?",
-    "services-questions-p2": "Both are essential elements of a website. In short, the domain name is the address of the web page, while the hosting provides the space and resources necessary to launch the website.",
-    "services-questions-3": "Is monthly maintenance necessary?",
-    "services-questions-p3": "Regular maintenance of your website allows you to attract and retain customers with new information, new products and services, in addition to helping you maintain or improve your ranking in Google.",
-    "services-questions-4": "How to pay?",
-    "services-questions-p4": "You can pay online by credit or debit cards and payments by transfers.",
+    "services-questions-1": " How can I get a custom website designed for my business?",
+    "services-questions-p1": "To get started, simply reach out to me through our contact form, and I will schedule a consultation to discuss your specific business needs and design preferences.",
+    "services-questions-2": "What types of websites do you specialize in creating?",
+    "services-questions-p2": "We specialize in a wide range of websites, including business websites, e-commerce platforms, portfolios, and more. ",
+    "services-questions-3": "What is the process of getting a website developed by your team?",
+    "services-questions-p3": "Our website development process involves an initial consultation, followed by project planning, design mockups, development, client feedback, and final deployment. We keep our clients informed and involved at every stage.",
+    "services-questions-4": " Do you offer e-commerce website development services?",
+    "services-questions-p4": "Yes, we provide comprehensive e-commerce solutions, including online store development, payment gateway integration, and inventory management, to help businesses establish a robust online presence.",
+    "services-questions-5": "Can you incorporate specific features or functionalities into my website?",
+    "services-questions-p5": "Absolutely! We work closely with our clients to understand their unique requirements and can customize websites with specific features, such as contact forms, chat functionality, and more.",
+    "services-questions-6": "What technologies do you use for website development?",
+    "services-questions-p6": "We leverage the latest web technologies, including HTML5, CSS3, JavaScript, and popular frameworks like React or Angular, ensuring that your website is modern, responsive, and scalable.",
+    "services-questions-7": "How long does it typically take to complete a website project?",
+    "services-questions-p7": "The timeline varies based on the complexity and scope of the project. We provide estimated timelines during the initial consultation, and our team works efficiently to meet agreed-upon deadlines.",
+    "services-questions-8": "Do you provide ongoing support and maintenance after the website is launched?",
+    "services-questions-p8": "Yes, we offer ongoing support and maintenance services to ensure your website stays up-to-date, secure, and continues to meet your evolving business needs.",
 
 
     "projects-link": "Link:",
     "projects-tec": "Used technology:",
-    "projects-info-17-p1": "TatoFood, page created for the sale of fast food.",
-    "projects-info-17-p2": "Designed to visually attract the user, with excellent quality culinary preparations and an interface with attractive transitions.",
-    "projects-info-16-p1": "Crystal Heart Store, is an online clothing store.",
-    "projects-info-16-p2": "Designed so that the customer can search for products in a very fast and easy way, can calculate the shipment and pay online.",
-    "projects-info-15-p1": "Magical Effect is a portfolio created for a video development agency.",
-    "projects-info-15-p2": "It shows the projects carried out over the years for different types of clients, names their services and years of experience in the industry.",
+    "projects-info-17-p1": "Whatsapp clone ",
+    "projects-info-17-p2": "This project involved creating a user-friendly platform here  users can engage in real-time communication, share voice and text messages, and experience a seamless chat interface. The website incorporates modern web technologies to ensure responsiveness and a smooth user experience. ",
+    "projects-info-16-p1": "A responsive website showcasing the exquisite world of Jodhpuri stone art.",
+    "projects-info-16-p2": "The site offers a seamless navigation experience, featuring an aesthetically pleasing design and user-friendly interface. From detailed stone product descriptions to captivating image galleries, the website captures the essence of Suraj Stone Art's craftsmanship and brings the timeless beauty of Jodhpuri stone to the digital realm.",
+    "projects-info-15-p1": "Thar desert photography is Portfolio / Blog website of a photographer/  guide from Rajasthan , INDIA  ",
+    "projects-info-15-p2": "Users can seamlessly book experienced guides through our platform, ensuring an enriched and educational experience. The integration of a secure payment gateway adds convenience, allowing users to embark on desert adventures with just a few clicks.",
     "projects-info-14-p1": "Justice, page created for law firm.",
     "projects-info-14-p2": "Focused on showing the client the value, experience and professionalism of the lawyers they can hire, choosing the category of their specific case.",
     "projects-info-13-p1": "Inspired Gamer, page created for the sale of digital and physical video games.",
@@ -125,7 +133,7 @@
     "projects-info-3-p2": "It offers a large amount of information on the perfect preparations for a good coffee, as well as the temperature at which it must be prepared, as well as the best coffee beans.",
     "projectsApp-info-18-p1": "An app that offers exchange services for all the cryptocurrencies of the Ethereum network. You can convert dollars into cryptocurrencies, change to others and sell them to be cashed in dollars.",
     "projectsApp-info-18-p2": "The application has an authentication system, so that the user can access their account and carry out the operations they want, it also has a section where you can see the evolution of the different cryptocurrencies.",
-    "projectsApp-info-17-p2": "This project consisted of the development of a SPA (Single Page Application) which is developed with the neumorphism style, makes use of a data API (The Dog API), and then part of the information is extracted and stored in a Database. of Data, (PostgreSQL) so that it can be used later at convenience.",
+    "projectsApp-info-17-p2": "This project consisted of the development of a SPA (Single P Application) which is developed with the neumorphism style, makes use of a data API (The Dog API), and then part of the information is extracted and stored in a Database. of Data, (PostgreSQL) so that it can be used later at convenience.",
     "projectsApp-info-16-p2": "It allows you to search for the weather of the city you choose, you can delete the city you searched for and also see more details of the city.",
     "projectsApp-info-15-p2": "The app extracts data from the giphy API, to search for the stickers that the user wants",
     "projectsApp-info-14-p2": "Small music player created with javascript, allows you to play, pause, fast forward and skip the songs",
