added favicon logo change

--- a/src/language/en.json
+++ b/src/language/en.json
@@ -128,7 +128,7 @@
     "projects-info-6-p1": "Spider-Man fan page, is a project developed in honor of Spider-Man.",
     "projects-info-6-p2": "It offers a wide variety of information about Spider-Man and his multi-verse variants, as well as facts and trivia about his enemies and allies.",
     "projects-info-5-p1": "PremierFood, page created for the sale of fast food.",
-    "projects-info-5-p2": "Designed to visually attract the user, with excellent quality culinary preparations and an interface with attractive transitions.",
+    "projects-info__-5-p2": "Designed to visually attract the user, with excellent quality culinary preparations and an interface with attractive transitions.",
     "projects-info-3-p1": "ProgramCoffe, a blog designed to inform about the best recipes for your coffee.",
     "projects-info-3-p2": "It offers a large amount of information on the perfect preparations for a good coffee, as well as the temperature at which it must be prepared, as well as the best coffee beans.",
     "projectsApp-info-18-p1": "An app that offers exchange services for all the cryptocurrencies of the Ethereum network. You can convert dollars into cryptocurrencies, change to others and sell them to be cashed in dollars.",
@@ -143,7 +143,7 @@
     "projectsApp-info-10-p1":"Client Manager",
     "projectsApp-info-10-p2":"Authorizes you to take a shift to repair your cell phone, you can edit the shift if you wish.",
     "projectsApp-info-9-p1":"Pomodoro app",
-    "projectsApp-info-9-p2":"It allows you to add a task to complete it in 25 minutes and at the end rest 5 minutes.",
+    "projectsApp-info-9-p2":"It allows you to add a task to complete it in 25 minutes and at the end rest 5 minutes. ",
     "projectsApp-info-8-p1":"Weekly expenses",
     "projectsApp-info-8-p2":"You can calculate the expenses that you are going to make in the week, having a budget that you choose.",
     "projectsApp-info-7-p1":"Quote insurance",
